Trying different toolchain version for MacOS

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,7 @@ jobs:
       - name: ✅ Checkout ✅
         uses: actions/checkout@v4
       - name: 🧱 Build and Release 🧱
+        if: matrix.target == 'x86_64-pc-windows-gnu' || matrix.target == 'x86_64-unknown-linux-musl'
         uses: rust-build/rust-build.action@latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -29,3 +30,12 @@ jobs:
           RUSTTARGET: ${{ matrix.target }}
           ARCHIVE_TYPES: ${{ matrix.archive }}
           TOOLCHAIN_VERSION: nightly
+      - name: 🧱 Build and Release 🧱
+        if: matrix.target == 'x86_64-apple-darwin'
+        uses: rust-build/rust-build.action@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          RUSTTARGET: ${{ matrix.target }}
+          ARCHIVE_TYPES: ${{ matrix.archive }}
+          TOOLCHAIN_VERSION: "1.75"
