--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ readme = "README.md"
 repository = "https://github.com/rustyhorde/cargo-matrix"
 version = "0.1.0"
 
+[package.metadata.binstall]
+
 [features]
 unstable = []
 
