--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,23 +22,14 @@ jobs:
       - name: ✅ Checkout ✅
         uses: actions/checkout@v4
       - name: 🧱 Build and Release 🧱
-        if: matrix.target == 'x86_64-unknown-linux-musl'
+        if: matrix.target == 'x86_64-unknown-linux-musl' || matrix.target == 'x86_64-pc-windows-gnu'
         uses: rust-build/rust-build.action@latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           RUSTTARGET: ${{ matrix.target }}
           ARCHIVE_TYPES: ${{ matrix.archive }}
-          TOOLCHAIN_VERSION: nightly-x86_64-unknown-linux-musl
-      - name: 🧱 Build and Release 🧱
-        if: matrix.target == 'x86_64-pc-windows-gnu'
-        uses: rust-build/rust-build.action@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          RUSTTARGET: ${{ matrix.target }}
-          ARCHIVE_TYPES: ${{ matrix.archive }}
-          TOOLCHAIN_VERSION: nightly-x86_64-pc-windows-gnu
+          TOOLCHAIN_VERSION: nightly
       - name: 🧱 Build and Release 🧱
         if: matrix.target == 'x86_64-apple-darwin'
         uses: rust-build/rust-build.action@latest
@@ -47,4 +38,4 @@ jobs:
         with:
           RUSTTARGET: ${{ matrix.target }}
           ARCHIVE_TYPES: ${{ matrix.archive }}
-          TOOLCHAIN_VERSION: "1.75-x86_64-apple-darwin"
+          TOOLCHAIN_VERSION: "1.74"
